# lazy-skill-router

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CURRENT_PUBLIC_CONTRACT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  UNRELEASED_STRATEGY_IMPLEMENTATION.md  doctor.py  eval_capability_retrieval.py  eval_external_user_holdout.py  eval_portable_beta.py  eval_router_ab.py  eval_routes.py  generate_routes.py  install.py  lazy-skill-router-threat-model.md  lazy_skill_router.py  lazy_skill_router_activation.py  lazy_skill_router_capability_index.py  lazy_skill_router_common.py  lazy_skill_router_contracts.py  lazy_skill_router_core.py  lazy_skill_router_host_catalog.py  lazy_skill_router_install_manifest.py  lazy_skill_router_inventory.py  lazy_skill_router_logging.py  lazy_skill_router_policy.py  lazy_skill_router_policy_ir.py  lazy_skill_router_retrieval.py  lazy_skill_router_scoring.py  materialize_router_ab_manifest.py  measurement.py  preserve_router_ab_bundle.py  pyproject.toml  release_checksums.py  routes.default.json  (+4 more)
.github/workflows/: ci.yml  release.yml
docs/: architecture-evolution.md
docs/build-week/: CHANGE_SCOPE.md  DEVPOST_SUBMISSION.md  JUDGE_DEMO.md  routes.judge-demo.json
docs/evaluation/: automated-shadow-evidence.md  external-user-blind-holdout.md  portable-beta-gate-2026-07-13.md  portable-beta-report-2026-07-13.json  promotion-evidence-protocol.md  router-ab-2026-07-13-bilingual-pilot.md  router-ab-2026-07-13.md
eval/: capability_metadata_ko_pilot.json  capability_retrieval.jsonl  portable_author_a.json  portable_author_b.json  portable_beta_manifest.json  portable_beta_manifest_2026-07-13.json  prompts.jsonl  router_ab_manifest.json  router_ab_manifest_bilingual_pilot.overlay.json
eval/results/: automated_shadow_evidence_2026-07-13.json  router_ab_2026-07-13_bilingual-pilot.json  router_ab_2026-07-13_corrected-control.json
examples/ci-relay-demo/: .gitignore  AGENTS.md  README.md
examples/ci-relay-demo/ci_relay/: __init__.py  artifact_store.py  cli.py  notifier.py  run_store.py  service.py  webhook.py
examples/ci-relay-demo/fixtures/: sample_ci_event.json
examples/ci-relay-demo/scripts/: verify.sh
examples/ci-relay-demo/tests/: test_notifier.py  test_pipeline.py  test_webhook.py
lazy_skill_router_cli/: cli.py
scripts/: judge_playground.py  prepare_judge_demo.py  test_judge_playground.py  test_prepare_judge_demo.py
skills/personal-skill-router/: SKILL.md
skills/personal-skill-router/agents/: openai.yaml
skills/personal-skill-router/references/: overlap-policy.md  policy-sync.md  skill-map.md
tests/: test_activation_ir.py  test_automated_shadow_evidence.py  test_capability_cli.py  test_capability_index.py  test_capability_retrieval.py  test_capability_retrieval_eval.py  test_cli.py  test_config_trust.py  test_eval_routes.py  test_external_user_holdout.py  test_fail_open_matrix.py  test_generate_routes.py  test_hook_contract.py  test_host_catalog.py  test_install.py  test_install_manifest.py  test_install_transaction.py  test_inventory.py  test_lazy_skill_router.py  test_logging.py  test_measurement.py  test_policy_ir.py  test_policy_ir_tools.py  test_policy_proposal.py  test_policy_v2_compile.py  test_portable_beta_eval.py  test_preserve_router_ab_bundle.py  test_regex_safety.py  test_release_checksums.py  test_route_result_v2.py  test_router_ab_eval.py  test_runtime_policy_safety.py  test_schema_v2.py  test_surface_equivalence.py
